# skillcert_contracts

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  sandbox_deployment_guide.md
.github/: README.md
.github/workflows/: ci.yml  release.yml
contracts/course/course_access/: Cargo.toml  README.md  goals_view.rs
contracts/course/course_access/src/: README.md  error.rs  lib.rs  schema.rs  test.rs
contracts/course/course_access/src/functions/: config.rs  contract_versioning.rs  grant_access.rs  has_access.rs  list_course_access.rs  list_user_courses.rs  mod.rs  revoke_access.rs  revoke_all_access.rs  save_profile.rs  transfer_course_access.rs
contracts/course/course_access/src/functions/utils/: storage_utils.rs
contracts/course/course_registry/: Cargo.toml  README.md
contracts/course/course_registry/src/: README.md  error.rs  lib.rs  schema.rs  test.rs
contracts/course/course_registry/src/functions/: access_control.rs  add_goal.rs  add_module.rs  archive_course.rs  backup_recovery.rs  contract_versioning.rs  course_rate_limit_utils.rs  create_course.rs  create_course_category.rs  create_prerequisite.rs  delete_course.rs  edit_course.rs  edit_goal.rs  edit_prerequisite.rs  get_course.rs  get_course_category.rs  get_courses_by_instructor.rs  get_prerequisites_by_course.rs  is_course_creator.rs  list_categories.rs  list_courses_with_filters.rs  list_modules.rs  mod.rs  remove_goal.rs  remove_module.rs  remove_prerequisite.rs  utils.rs
contracts/course/course_registry/src/functions/utils/: cache.rs  cache_test.rs  mod.rs  storage_utils.rs
contracts/course/course_registry/test_snapshots/functions/add_module/test/: test_add_module_invalid_course.1.json  test_add_module_success.1.json  test_course_registry_add_module_generates_unique_ids.1.json  test_course_registry_add_module_storage_key_format.1.json
contracts/course/course_registry/test_snapshots/functions/create_course/test/: test_add_module_success.1.json  test_add_module_success_multiple.1.json  test_cannot_create_courses_with_duplicate_title.1.json  test_generate_course_id.1.json
contracts/course/course_registry/test_snapshots/test/: test_remove_module_storage_isolation.1.json  test_remove_module_success.1.json  test_remove_multiple_different_modules.1.json
contracts/course/course_registry/test_snapshots/test/tests/: test_get_course_success.1.json  test_get_course_with_different_course_id.1.json
contracts/schema_export/: Cargo.toml
contracts/schema_export/src/: lib.rs
contracts/test_contract/: Cargo.toml  README.md
contracts/test_contract/src/: lib.rs
contracts/user_management/: Cargo.toml  README.md
contracts/user_management/src/: README.md  error.rs  lib.rs  schema.rs  test.rs
contracts/user_profile/: Cargo.toml  README.md
contracts/user_profile/src/: README.md  error.rs  lib.rs  schema.rs  test.rs
docs/: contract_versioning_system.md  input_validation_enhancements.md  sandbox_deployment_guide.md
schemas/: contracts_metadata.json  course_access_docs.md  course_access_schema.json  course_registry_docs.md  course_registry_schema.json  user_management_docs.md  user_management_schema.json
schemas/course_access-ts/: README.md  package.json
schemas/course_registry-ts/: README.md  package.json
schemas/user_management-ts/: README.md  package.json
scripts/: build_contracts.sh  deploy_contracts.sh  export_schemas.sh  invoke_examples.sh
(+29 files in other folders)
