[workspace]
resolver = "2"
members = [
  "contracts/course/course_registry",
  "contracts/course/course_access",
  "contracts/user_profile",
  "contracts/test_contract",
  "contracts/user_management"
]

[workspace.dependencies]
soroban-sdk = "22"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true

