[package]
name = "course_access"
version = "0.1.0"
edition = "2021"

# [dependencies]
# soroban-sdk = "20.3.0"  # Cambiar según la versión actual usada

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"        # Tamaño reducido
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"