[package]
name = "course_access"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { workspace = true }


[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[profile.release]
opt-level = "z"        # Tamaño reducido
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
