[package]
name = "course_registry"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[profile.release]
opt-level = "z"        # Tamaño reducido
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
